home page content alignment fixes

--- a/Style.css
+++ b/Style.css
@@ -73,6 +73,7 @@ body{
 .home{
    display: flex;
    justify-content: center;
+   align-items: center;
 }
 
 
